# VAC---C

./: CMakeLists.txt
day3/: day3.c
day4/: day4.c  task1-datatypes.c  task2-operators.c
day5/: day_5.c
day6/: arrays.c
day7/: search.c  sort.c
recruitment_tracking/: task_1.c  task_10.c  task_2.c  task_3.c  task_4.c  task_5.c  task_6.c  task_7.c  task_8.c  task_9.c
