cmake_minimum_required(VERSION 3.24)
project(VAC_C C)

set(CMAKE_C_STANDARD 11)

add_executable(VAC_C
        day3/day3.c
        day4/day4.c
        day4/task1-datatypes.c
        day4/task2-operators.c
        day5/day_5.c
        day6/arrays.c
        day7/search.c
        day7/sort.c
        recruitment_tracking/task_1.c
        recruitment_tracking/task_2.c
        recruitment_tracking/task_3.c
        recruitment_tracking/task_4.c
        recruitment_tracking/task_5.c
        recruitment_tracking/task_6.c recruitment_tracking/task_7.c recruitment_tracking/task_8.c recruitment_tracking/task_9.c)
